fix: step3 사다리 게임 실행 구현